Closed Bug 1453942 Opened 6 years ago Closed 6 years ago

Screenshots overlay is wrongly moved in background at first click when a selection is performed on latest Nightly

Categories

(Core :: Web Painting, defect, P1)

x86_64
All
defect

Tracking

()

VERIFIED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox59 --- unaffected
firefox60 --- unaffected
firefox61 blocking verified

People

(Reporter: cmuntean, Assigned: mattwoodrow)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached video screenshots overlay.mp4
[Affected versions]:
- Nightly 61.0a1, Build ID: 20180413100443

[Affected Platforms]:
- All Windows
- All Mac
- All Linux

[Prerequisites]:
- Screenshots Onboarding tour was already visited.

[Steps to reproduce]:
1. Open the Firefox browser and navigate to "https://www.wikipedia.org/".
2. Click the "Take a Screenshots" button from "Page Actions" menu.
3. Click and hold it to the page without moving the mouse.
4. Observe the Screenshots overlay.

[Expected result]:
- The Screenshtos overlay is correctly displayed.

[Actual results]:
- The Screenshtos overlay is moved in background.

[Regression]:
- It seems that this is a Nightly regression. Using mozregression tools I have found a regression window. Here are the results:
Last good revision: 6415ccbf739f36f71548540bd92c3b86ab9e1529
First bad revision: d112cf7b2b60e6244099dc3b599a2444ba0d1da3
Pushlog: https://goo.gl/n3rymW

I suspect that bug 1443027 introduced this issue. @Matt can you please take a look at this?

[Notes]:
- Attached a screen recording with the issue.
Looks like a pretty significant functionality impairment for Screenshots.
This is mostly fixed by bug 1452225, though there's still an issue where we darken the overlay (by doubling it) that I'll fix here.
Depends on: 1452225, 1453541
Assignee: nobody → matt.woodrow
Comment on attachment 8968084 [details]
Bug 1453942 - Invalidate if any content ancestor of the display item frame is modified, not just frame tree ancestors.

https://reviewboard.mozilla.org/r/236758/#review242590

LGTM.
Attachment #8968084 - Flags: review?(mikokm) → review+
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/1a7c148094ff
Invalidate if any content ancestor of the display item frame is modified, not just frame tree ancestors. r=miko
Priority: -- → P1
https://hg.mozilla.org/mozilla-central/rev/1a7c148094ff
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
This issue is no longer reproducible on latest Nightly 61.0a1 (Build ID: 20180417225505), using Firefox Screenshots (both 30.1.0 and latest Dev Version 32.0.0 installed from here:https://screenshots.dev.mozaws.net/homepage/install-test-local.html), on Windows 10 x64, Mac 10.12.6 and Ubuntu 14.04 x64.
Status: RESOLVED → VERIFIED
This created a regession on Netflix.
See https://webcompat.com/issues/16547
Flags: needinfo?(matt.woodrow)
The Netflix issue is being tracked in bug 1458531.
Flags: needinfo?(matt.woodrow)
Depends on: 1458531
No longer depends on: 1458531
You need to log in before you can comment on or make changes to this bug.